@@ -298,7 +298,7 @@ public class TestPlugins {
                 if (pluginJars.containsKey(testPackage)) {
                     log.debug("Skipping recompilation of {}", testPackage.resourceDir());
                 }
-                pluginJars.put(testPackage, createPluginJar(testPackage.resourceDir(), testPackage.removeRuntimeClasses(), Collections.emptyMap()));
+                pluginJars.put(testPackage, createPluginJar(testPackage.resourceDir(), testPackage.removeRuntimeClasses(), Map.of()));
             }
         } catch (Throwable e) {
             log.error("Could not set up plugin test jars", e);
@@ -462,7 +462,7 @@ public class TestPlugins {
         }
 
         StringWriter writer = new StringWriter();
-        List<String> options = Arrays.asList(
+        List<String> options = List.of(
             "-d", binDir.toString() // Write class output to a different directory.
         );
         try (StandardJavaFileManager fileManager = compiler.getStandardFileManager(null, null, null)) {
